--- a/Style/_variables.scss
+++ b/Style/_variables.scss
@@ -1,5 +1,5 @@
-$colormobile:grey;
-$colortablet:black;
-$colorfontdesktop:white;
 
+$colormobile:grey;
+$colortablet: black;
+$colorfontdesktop:red
 
